--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,7 @@ authors = [
 ]
 readme = "README.md"
 requires-python = ">=3.9"
-classifiers = [
-    "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
-    "Operating System :: OS Independent",
-]
+
 dependencies = [
     "requests>=2.25.1",
 ]
@@ -25,7 +21,7 @@ dependencies = [
 "Bug Tracker" = "https://github.com/toby-simonds/rocket_package/issues"
 
 [tool.setuptools]
-packages=["rocket_package", "rocket_package.src",  "rocket_package.configs", "rocket_package.src.models.motors", "rocket_package.src.models.utils", "rocket_package.src.analysis", "rocket_package.src.models", "rocket_package.src.utils"]
+packages=["rocket_package", "rocket_package.src", "rocket_package.configs", "rocket_package.src.models.motors", "rocket_package.src.models", "rocket_package.src.utils", "rocket_package.src.analysis"]
 
 [tool.setuptools.package-data]
 rocket_package = ["*.txt", "*.dat"] 
